added "images" file and added images, then linked images to "imaged" folder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <section>
-    <img src= starcraft_front.jpg
+    <img src= images/starcraft_front.jpg
         alt=" A terran spacecraft in orbit of a planet"
         width="100%"/>
   </section>
@@ -31,20 +31,21 @@
 
   <section>
     <h2>Terran</h2>
-    <img src= terran.jpg
+    <img src= images/terran.jpg
           alt=" terran units in a razed warzone"
             width="100%"/>
   </section>
 
   <section>
     <h3>Zerg</h3>
-      <img src= starcraft_zerg.png
-            alt=" two zerg units on a desert planet"
+      <img src= images/starcraft_zerg.png
+              width="100%"
+                  alt=" two zerg units on a desert planet"/>
   </section>
 
   <section>
     <h4>Protoss</h4>
-    <img src= protoss.jpg
+    <img src= images/protoss.jpg
           alt=" two diffrent portoss units"
             width="100%"/>
 
