added anchor to images of diffrent spieces

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <html lang="en">
 
 <head>
-    <a href="#h2">Terran</a>
+    <!-- <a href="#h2">Terran</a> -->
+  <a href="#terran">Terran</a>
+    <a href="#protoss">protoss</a>
+      <a href="#zerg">zerg</a>
       <title>Starcraft Fanpage</title>
         <link rel="stylesheet" href="starcraftsite.css">
           <meta charset="utf-8">
-
 
 </head>
 <body>
@@ -30,6 +32,7 @@
   </section>
 
   <section>
+    <a name="terran"></a>
     <h2>Terran</h2>
     <img src= images/terran.jpg
           alt=" terran units in a razed warzone"
@@ -37,6 +40,7 @@
   </section>
 
   <section>
+    <a name="zerg"></a>
     <h3>Zerg</h3>
       <img src= images/starcraft_zerg.png
               width="100%"
@@ -44,13 +48,14 @@
   </section>
 
   <section>
+    <a name="protoss"></a>
     <h4>Protoss</h4>
     <img src= images/protoss.jpg
           alt=" two diffrent portoss units"
             width="100%"/>
 
   </section>
-  <p> sdlgksadgkm
+
 
 </body>
 
