added links to species individual pages

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <html lang="en">
 
 <head>
-    <!-- <a href="#h2">Terran</a> -->
+
+    <title>Starcraft Fanpage</title>
+      <link rel="stylesheet" href="starcraftsite.css">
+        <meta charset="utf-8">
+
   <a href="#terran">Terran</a>
     <a href="#protoss">protoss</a>
       <a href="#zerg">zerg</a>
-      <title>Starcraft Fanpage</title>
-        <link rel="stylesheet" href="starcraftsite.css">
-          <meta charset="utf-8">
-
 </head>
+
 <body>
 
   <section>
@@ -34,14 +35,18 @@
   <section>
     <a name="terran"></a>
     <h2>Terran</h2>
-    <img src= images/terran.jpg
+    <a href="starcraftsite_terran.html"<i>
+    <img src= "images/terran.jpg"
           alt=" terran units in a razed warzone"
             width="100%"/>
+    </a>
+
   </section>
 
   <section>
     <a name="zerg"></a>
     <h3>Zerg</h3>
+    <a href="website_zerg.html"<i>
       <img src= images/starcraft_zerg.png
               width="100%"
                   alt=" two zerg units on a desert planet"/>
@@ -50,6 +55,7 @@
   <section>
     <a name="protoss"></a>
     <h4>Protoss</h4>
+    <a href="website_protoss.html"<i>
     <img src= images/protoss.jpg
           alt=" two diffrent portoss units"
             width="100%"/>
