--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <link rel="stylesheet" href="starcraftsite.css">
         <meta charset="utf-8">
 
-  <a href="#terran">Terran</a>
-    <a href="#protoss">protoss</a>
-      <a href="#zerg">zerg</a>
+  <a href="#Terran">Terran</a>
+    <a href="#Protoss">protoss</a>
+      <a href="#Zerg">zerg</a>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
   </section>
 
   <section>
-    <a name="terran"></a>
+    <a name="Terran"></a>
     <h2>Terran</h2>
     <a href="starcraftsite_terran.html"<i>
     <img src= "images/terran.jpg"
@@ -44,7 +44,7 @@
   </section>
 
   <section>
-    <a name="zerg"></a>
+    <a name="Zerg"></a>
     <h3>Zerg</h3>
     <a href="website_zerg.html"<i>
       <img src= images/starcraft_zerg.png
@@ -53,7 +53,7 @@
   </section>
 
   <section>
-    <a name="protoss"></a>
+    <a name="Protoss"></a>
     <h4>Protoss</h4>
     <a href="website_protoss.html"<i>
     <img src= images/protoss.jpg
