added background image, changed text colors

--- a/website_protoss.html
+++ b/website_protoss.html
@@ -12,3 +12,8 @@
 <img src= images/Protossunits.png
     alt=""
     width="100%"/>
+
+<img src= images/heroprotoss.jpg
+      alt=""
+        width="50%"
+          align=center />
