--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Starcraft Fanpage</title>
       <link rel="stylesheet" href="starcraftsite.css">
         <meta charset="utf-8">
-
+<a href="#history">history</a>
   <a href="#Terran">Terran</a>
     <a href="#Protoss">protoss</a>
       <a href="#Zerg">zerg</a>
+
 </head>
 
-<body>
+<body background="images/stars.jpg">
 
   <section>
     <img src= images/starcraft_front.jpg
@@ -22,13 +23,14 @@
   </section>
 
   <section>
-          <h1 class="title" >History</h>
-
+          <h2> history</h2>
+         <a name="history"></a>
 
             <p>The story focuses on the activities of three species in a part of the Milky Way known as the Koprulu Sector. Millennia before any of the events of the games, a species known as the Xel'Naga genetically engineer the Protoss and later the Zerg in attempts to create pure beings. These experiments backfire and the Xel'Naga are largely destroyed by the Zerg. Centuries before the beginning of StarCraft in 2499, the hardline international government of Earth, the United Earth Directorate (UED), commissions a colonization program as part of a solution to overpopulation, however the computers automating the colony ships malfunction, propelling the Terran colonists far off course to the edge of Protoss space. Out of contact with Earth, they form various factions to maintain their interests. Intrigued by the behavior and mentality of the Terrans, the Protoss remain hidden to examine the humans, while protecting them from other threats without their knowledge. The Zerg, however, target the Terrans for assimilation to harness their psionic potential, forcing the Protoss to destroy tainted Terran colonies to contain the Zerg infestation.</p>
 
             <p>StarCraft begins days after the first of these attacks, where the predominant Terran government, the Confederacy of Man, falls into a state of panic as it comes under attack by both the Zerg and the Protoss, in addition to increasing rebel activity led by Arcturus Mengsk against its rule. The Confederacy eventually succumbs to Mengsk's rebels when they use Confederate technology to lure the Zerg into attacking the Confederate capital, Tarsonis. In the consequent power vacuum, Mengsk crowns himself emperor of a new Terran Dominion. During the assault on Tarsonis, Mengsk allows the Zerg to capture and infest his psion second-in-command, Sarah Kerrigan. This betrayal prompts Mengsk's other commander, Jim Raynor, to desert him with a small army. Having retreated with Kerrigan to their primary hive clusters, the Zerg are assaulted by Protoss forces commanded by Tassadar and the dark templar Zeratul. Through assassinating a Zerg cerebrate, Zeratul inadvertently allows the Overmind to learn the location of the Protoss homeworld, Aiur. The Overmind quickly launches an invasion to assimilate the Protoss and gain genetic perfection. Pursued by his own people as a heretic for siding with the dark templar Zeratul, Tassadar returns to Aiur and with the assistance of Raynor and the templar Fenix, Tassadar launches an attack on the Overmind and ultimately sacrifices himself to kill the creature.
-              </p>
+            </p>
+            </a>
 
   </section>
 
@@ -59,10 +61,17 @@
     <img src= images/protoss.jpg
           alt=" two diffrent portoss units"
             width="100%"/>
+    </a>
 
   </section>
+    </body>
 
 
-</body>
+
+
+<footer>
+  <p>all images owned by blizzard, gathred from "Blizzard.com"</p>
+
+</footer>
 
 </html>
