commented protoss page image

--- a/website_protoss.html
+++ b/website_protoss.html
@@ -13,7 +13,7 @@
     alt=""
     width="100%"/>
 
-<img src= images/heroprotoss.jpg
+<!-- <img src= images/heroprotoss.jpg
       alt=""
         width="50%"
-          align=center />
+          align=center /> -->
