--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Starcraft Fanpage</title>
       <link rel="stylesheet" href="starcraftsite.css">
         <meta charset="utf-8">
+<h1>
 <a href="#history">history</a>
   <a href="#Terran">Terran</a>
     <a href="#Protoss">protoss</a>
       <a href="#Zerg">zerg</a>
+<h1>
 
 </head>
 
@@ -22,9 +24,12 @@
         width="100%"/>
   </section>
 
-  <section>
-          <h2> history</h2>
+
+      <h2> history</h2>
          <a name="history"></a>
+
+        <section>
+
 
             <p>The story focuses on the activities of three species in a part of the Milky Way known as the Koprulu Sector. Millennia before any of the events of the games, a species known as the Xel'Naga genetically engineer the Protoss and later the Zerg in attempts to create pure beings. These experiments backfire and the Xel'Naga are largely destroyed by the Zerg. Centuries before the beginning of StarCraft in 2499, the hardline international government of Earth, the United Earth Directorate (UED), commissions a colonization program as part of a solution to overpopulation, however the computers automating the colony ships malfunction, propelling the Terran colonists far off course to the edge of Protoss space. Out of contact with Earth, they form various factions to maintain their interests. Intrigued by the behavior and mentality of the Terrans, the Protoss remain hidden to examine the humans, while protecting them from other threats without their knowledge. The Zerg, however, target the Terrans for assimilation to harness their psionic potential, forcing the Protoss to destroy tainted Terran colonies to contain the Zerg infestation.</p>
 
@@ -47,7 +52,7 @@
 
   <section>
     <a name="Zerg"></a>
-    <h3>Zerg</h3>
+      <h3>Zerg</h3>
     <a href="website_zerg.html"<i>
       <img src= images/starcraft_zerg.png
               width="100%"
@@ -56,21 +61,21 @@
 
   <section>
     <a name="Protoss"></a>
-    <h4>Protoss</h4>
+      <h4>Protoss</h4>
     <a href="website_protoss.html"<i>
-    <img src= images/protoss.jpg
+      <img src= images/protoss.jpg
           alt=" two diffrent portoss units"
             width="100%"/>
     </a>
-
   </section>
+
     </body>
 
 
 
 
 <footer>
-  <p>all images owned by blizzard, gathred from "Blizzard.com"</p>
+  All images owned by Blizzard and gathred from    <a href="https://starcraft2.com/en-us/" target="_blank" >blizzard</a>
 
 </footer>
 
